--- a/publications/2025-01-nmopso.md
+++ b/publications/2025-01-nmopso.md
@@ -2,13 +2,13 @@
 title: "Navigation variable-based multi-objective particle swarm optimization for UAV path planning with kinematic constraints"
 collection: publications
 category: articles
-permalink: /publication/2009-10-01-paper-title-number-1
-excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
-date: 2025-01-01
+permalink: /publications/2025-01-nmopso
+doi: 10.1007/s00521-024-10945-1
+authors: 'Thi Thuy Ngan Duong, Duy-Nam Bui & Manh Duong Phung'
+date: 2025-01-02
 venue: 'Neural Computing and Applications'
-slidesurl: 'http://academicpages.github.io/files/slides1.pdf'
-paperurl: 'http://academicpages.github.io/files/paper1.pdf'
-citation: 'Your Name, You. (2009). &quot;Navigation variable-based multi-objective particle swarm optimization for UAV path planning with kinematic constraints".&quot; <i>Neural Computing and Applications</i>. 1(1).'
+paperurl: 'https://doi.org/10.1007/s00521-024-10945-1'
+codeurl: 'https://github.com/ngandng/NMOPSO'
 ---
 
-The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
+Path planning is essential for unmanned aerial vehicles (UAVs) as it determines the path that the UAV needs to follow to complete a task. This work addresses this problem by introducing a new algorithm called navigation variable-based multi-objective particle swarm optimization (NMOPSO). It first models path planning as an optimization problem via the definition of a set of objective functions that include optimality and safety requirements for UAV operation. The NMOPSO is then used to minimize those functions through Pareto optimal solutions. The algorithm features a new path representation based on navigation variables to include kinematic constraints and exploit the maneuverable characteristics of the UAV. It also includes an adaptive mutation mechanism to enhance the diversity of the swarm for better solutions. Comparisons with various algorithms have been carried out to benchmark the proposed approach. The results indicate that the NMOPSO performs better than not only other particle swarm optimization variants but also other state-of-the-art multi-objective and meta-heuristic optimization algorithms. Experiments have also been conducted with real UAVs to confirm the validity of the approach for practical flights. The source code of the algorithm is available at [https://github.com/ngandng/NMOPSO](https://github.com/ngandng/NMOPSO).
