--- a/_publications/2025-01-nmopso.md
+++ b/_publications/2025-01-nmopso.md
@@ -1,5 +1,5 @@
 ---
-title: "Navigation variable-based multi-objective particle swarm optimization for UAV path planning with kinematic constraints"
+title: 'Navigation variable-based multi-objective particle swarm optimization for UAV path planning with kinematic constraints'
 collection: publications
 category: articles
 permalink: /publications/2025-01-nmopso
@@ -7,7 +7,7 @@ doi: 10.1007/s00521-024-10945-1
 authors: 'Thi Thuy Ngan Duong, Duy-Nam Bui & Manh Duong Phung'
 date: 2025-01-02
 venue: 'Neural Computing and Applications'
-paperurl: 'https://doi.org/10.1007/s00521-024-10945-1'
+arxivurl: 'https://arxiv.org/pdf/2501.03261'
 codeurl: 'https://github.com/ngandng/NMOPSO'
 ---
 
