Add detail for the paper

--- a/_publications/2025-01-nmopso.md
+++ b/_publications/2025-01-nmopso.md
@@ -12,3 +12,14 @@ codeurl: 'https://github.com/ngandng/NMOPSO'
 ---
 
 Path planning is essential for unmanned aerial vehicles (UAVs) as it determines the path that the UAV needs to follow to complete a task. This work addresses this problem by introducing a new algorithm called navigation variable-based multi-objective particle swarm optimization (NMOPSO). It first models path planning as an optimization problem via the definition of a set of objective functions that include optimality and safety requirements for UAV operation. The NMOPSO is then used to minimize those functions through Pareto optimal solutions. The algorithm features a new path representation based on navigation variables to include kinematic constraints and exploit the maneuverable characteristics of the UAV. It also includes an adaptive mutation mechanism to enhance the diversity of the swarm for better solutions. Comparisons with various algorithms have been carried out to benchmark the proposed approach. The results indicate that the NMOPSO performs better than not only other particle swarm optimization variants but also other state-of-the-art multi-objective and meta-heuristic optimization algorithms. Experiments have also been conducted with real UAVs to confirm the validity of the approach for practical flights. The source code of the algorithm is available at [https://github.com/ngandng/NMOPSO](https://github.com/ngandng/NMOPSO).
+
+## Demo
+To run the NMOPSO algorithm:
+- Download all the source files from this repository.
+- Open MATLAB.
+- Execute the main script by running `NMOPSO.m`.
+
+Below are visualizations of the NMOPSO algorithm in action for different scenarios:
+
+<img src="https://github.com/ngandng/NMOPSO/blob/main/Scen3xy.jpg?raw=true" alt="" width="50%"/>
+<img src="https://github.com/ngandng/NMOPSO/blob/main/Scen6xy.jpg?raw=true" alt="" width="42%"/>
