--- a/_publications/2024-01-sii-2.md
+++ b/_publications/2024-01-sii-2.md
@@ -13,3 +13,30 @@ codeurl: 'https://github.com/duynamrcv/reconfigurable_vshape'
 ---
 
 This paper presents the design and implementation of a self-reconfigurable V-shape formation controller for multiple unmanned aerial vehicles (UAVs) navigating through narrow spaces in a dense obstacle environment. The selection of the V-shape formation is motivated by its maneuverability and visibility advantages. The main objective is to develop an effective formation control strategy that allows UAVs to autonomously adjust their positions to form the desired formation while navigating through obstacles. To achieve this, we propose a distributed behavior-based control algorithm that combines the behaviors designed for individual UAVs so that they together navigate the UAVs to their desired positions. The reconfiguration process is automatic, utilizing individual UAV sensing within the formation, allowing for dynamic adaptations such as opening/closing wings or merging into a straight line. Simulation results show that the self-reconfigurable V-shape formation offers adaptability and effectiveness for UAV formations in complex operational scenarios.
+
+## Installation
+The source code of this method is written in MATLAB.
+```
+git clone https://github.com/duynamrcv/reconfigurable_vshape
+```
+Run `main.m` to run the main script.
+
+## Demo
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_6u7yMNOySc?si=qEeAv7_0yAu8KgQw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+The motion path of V-shaped formation in narrow space, with the ability to automatically expand and shrink depending on the width of the environment.
+<img src="https://github.com/duynamrcv/reconfigurable_vshape/raw/master/result/result.png" alt="" width="100%"/>
+<img src="https://github.com/duynamrcv/reconfigurable_vshape/raw/master/result/number.png" alt="" width="100%"/>
+
+### Metrics
+Order:
+
+$$
+\Phi=\dfrac{1}{n}\left\Vert\sum_{i=1}^n{\left[\cos\psi_i, \sin\psi_i\right]^T}\right\Vert.
+$$
+
+where $$\psi_i$$ is the heading value of robot $$i$$.
+
+<img src="https://github.com/duynamrcv/reconfigurable_vshape/raw/master/result/distance.png" alt="" width="48%"/>
+<img src="https://github.com/duynamrcv/reconfigurable_vshape/raw/master/result/heading.png" alt="" width="48%"/>
+<img src="https://github.com/duynamrcv/reconfigurable_vshape/raw/master/result/error.png" alt="" width="48%"/>
+<img src="https://github.com/duynamrcv/reconfigurable_vshape/raw/master/result/mean.png" alt="" width="48%"/>
