--- a/_publications/2025-01-nmopso.md
+++ b/_publications/2025-01-nmopso.md
@@ -21,5 +21,5 @@ To run the NMOPSO algorithm:
 
 Below are visualizations of the NMOPSO algorithm in action for different scenarios:
 
-<img src="https://github.com/ngandng/NMOPSO/blob/main/Scen3xy.jpg?raw=true" alt="" width="50%"/>
-<img src="https://github.com/ngandng/NMOPSO/blob/main/Scen6xy.jpg?raw=true" alt="" width="42%"/>
+<img src="https://github.com/ngandng/NMOPSO/raw/main/Scen3xy.jpg" alt="" width="50%"/>
+<img src="https://github.com/ngandng/NMOPSO/raw/main/Scen6xy.jpg" alt="" width="42%"/>
