--- a/_publications/2024-01-sii-2.md
+++ b/_publications/2024-01-sii-2.md
@@ -16,9 +16,9 @@ This paper presents the design and implementation of a self-reconfigurable V-sha
 
 ## Installation
 The source code of this method is written in MATLAB.
-```
+<pre>
 git clone https://github.com/duynamrcv/reconfigurable_vshape
-```
+</pre>
 Run `main.m` to run the main script.
 
 ## Demo
@@ -28,7 +28,7 @@ The motion path of V-shaped formation in narrow space, with the ability to autom
 <img src="https://github.com/duynamrcv/reconfigurable_vshape/raw/master/result/number.png" alt="" width="100%"/>
 
 ### Metrics
-Order:
+Metrics used to evaluate the performance of the method include: *Distance to each pair of robot*, *Mean error*, *Mean distance between two consecutive robot*, and *Order*, where *Order* metric is computed by:
 
 $$
 \Phi=\dfrac{1}{n}\left\Vert\sum_{i=1}^n{\left[\cos\psi_i, \sin\psi_i\right]^T}\right\Vert.
@@ -37,6 +37,6 @@ $$
 where $$\psi_i$$ is the heading value of robot $$i$$.
 
 <img src="https://github.com/duynamrcv/reconfigurable_vshape/raw/master/result/distance.png" alt="" width="48%"/>
-<img src="https://github.com/duynamrcv/reconfigurable_vshape/raw/master/result/heading.png" alt="" width="48%"/>
 <img src="https://github.com/duynamrcv/reconfigurable_vshape/raw/master/result/error.png" alt="" width="48%"/>
 <img src="https://github.com/duynamrcv/reconfigurable_vshape/raw/master/result/mean.png" alt="" width="48%"/>
+<img src="https://github.com/duynamrcv/reconfigurable_vshape/raw/master/result/heading.png" alt="" width="48%"/>
