--- a/_publications/2024-01-sii-1.md
+++ b/_publications/2024-01-sii-1.md
@@ -12,3 +12,14 @@ codeurl: 'https://github.com/duynamrcv/aco_3d_ipp'
 ---
 
 This paper presents a new swarm intelligence-based approach to deal with the cooperative path planning problem of unmanned aerial vehicles (UAVs), which is essential for the automatic inspection of infrastructure. The approach uses a 3D model of the structure to generate viewpoints for the UAVs. The calculation of the viewpoints considers the constraints related to the UAV formation model, camera parameters, and requirements for data post-processing. The viewpoints are then used as input to formulate the path planning as an extended traveling salesman problem and the definition of a new cost function. Ant colony optimization is finally used to solve the problem to yield optimal inspection paths. Experiments with 3D models of real structures have been conducted to evaluate the performance of the proposed approach. The results show that our system is not only capable of generating feasible inspection paths for UAVs but also reducing the path length by 29.47% for complex structures when compared with another heuristic approach. The source code of the algorithm can be found at [https://github.com/duynamrcv/aco_3d_ipp](https://github.com/duynamrcv/aco_3d_ipp).
+
+## Installation
+The source code of this method is written in MATLAB.
+<pre>
+git clone https://github.com/duynamrcv/aco_3d_ipp
+</pre>
+Run `main.m` to run the main script.
+
+## Demo
+<img src="https://github.com/duynamrcv/aco_3d_ipp/raw/master/PathVideo.gif" alt="" width="48%"/>
+<img src="https://github.com/duynamrcv/aco_3d_ipp/raw/master/CostVideo.gif" alt="" width="48%"/>
