Update latest cv and academic service

--- a/_publications/2024-07-iccri.md
+++ b/_publications/2024-07-iccri.md
@@ -5,6 +5,7 @@ category: conferences
 permalink: /publications/2024-07-iccri
 authors: 'Duy-Nam Bui, Thu Hang Khuat, Manh Duong Phung, Thuan-Hoang Tran & Dong LT Tran'
 date: 2024-07-01
+doi: '10.1109/ICCRI64298.2024.00025'
 venue: '2024 the 7th International Conference on Control, Robotics and Informatics (ICCRI)'
 arxivurl: 'https://arxiv.org/pdf/2410.09799'
 videourl: 'https://youtu.be/G_Sor9JHhlY'
